docs: updated README to include How To Run and updated Game Mechanics together with Project Structure